@@ -746,7 +746,7 @@ class NatRule extends Rule
 
 		print $padding."    Tags:  ".$this->tags->toString_inline()."\n";
 
-        if( isset($this->_targets) )
+        if( $this->_targets !== null )
             print $padding."  Targets:  ".$this->targets_toString()."\n";
 
 		print "\n";
